--- a/Index.html
+++ b/Index.html
@@ -11,9 +11,12 @@
         <h2>Jouw keuze: <span id="human"></span></h2>
         <h2>Uitkomst: <span id="result"></span></h2>
 
-        <button type="button" id="steen">Steen</button> 
-        <button type="button" id="papier">Papier</button> 
-        <button type="button" id="schaar">Schaar</button> 
+    <a href="#" onclick="handleButtonClick()">
+        <img src="steen.jpg" alt="Button Image" id="steen">
+        <img src="papier.jpg" alt="Button Image" id="papier">
+        <img src="schaar.jpg" alt="Button Image" id="schaar">
+    </a>
+
 
     <script src="Steenpapierschaar.js">
     </script>
